--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <script>
         const btn = document.getElementById("btn");
         btn.addEventListener('click', () => {
-            window.location.href = "index.html";
+            window.location.href = "https://acc0855.github.io/codersss/";
         })
     </script>
     <div class="header">
